--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 thiserror = "1.0"
 tracing = "0.1"
 rand = "0.8"
+tokio = { version = "1.0", features = ["full"] }
 
 [dev-dependencies]
 tempfile = "3.8"
